--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -6,7 +6,7 @@ on:
     - cron: "0 0 * * SAT" # every saturday at midnight
   push:
     branches:
-      - "main"
+      - main
 
 jobs:
   build-image:
@@ -30,4 +30,4 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: ghcr.io/stever/caddy-auth:latest
+          tags: ghcr.io/${{ github.repository }}:latest
